--- a/web/javascript高级程序设计/02_面象对象程序设计.md
+++ b/web/javascript高级程序设计/02_面象对象程序设计.md
@@ -338,26 +338,208 @@ alert(person1.name); //"Nicholas"——来自原型
 - hasOwnProperty(),可以检测一个属性是存在于实例中，还是存在于原型中。这个方法(不要忘了它是从Object继承来的)只在给定属性存在于对象实例中时，才会返回true
 
 ```js
-function Person(){
-    }
-    Person.prototype.name = "Nicholas";
-    Person.prototype.age = 29;
-    Person.prototype.job = "Software Engineer";
-    Person.prototype.sayName = function(){
-        alert(this.name);
-    };
+fuction Person(){
+}
 
-        var person1 = new Person();
+Person.prototype.name = "Nicholas";
+Person.prototype.age = 29;
+Person.prototype.job = "Software Engineer";
+Person.prototype.sayName = function(){
+    alert(this.name);
+ };
+
+var person1 = new Person();
 var person2 = new Person();
 alert(person1.hasOwnProperty("name"));  //false
 person1.name = "Greg";
-alert(person1.name); //"Greg"——来自实例 alert(person1.hasOwnProperty("name")); //true
-alert(person2.name); //"Nicholas"——来自原型 alert(person2.hasOwnProperty("name")); //false
+alert(person1.name); //"Greg"——来自实例 
+alert(person1.hasOwnProperty("name")); //true
+alert(person2.name); //"Nicholas"——来自原型 
+alert(person2.hasOwnProperty("name")); //false
 delete person1.name;
-alert(person1.name); //"Nicholas"——来自原型 alert(person1.hasOwnProperty("name")); //false
+alert(person1.name); //"Nicholas"——来自原型
+alert(person1.hasOwnProperty("name")); //false
 ```
 
-## 示例
+#### 原型 与 in
+
+- 在单独使用时，**in 操作符会在通过对象能够访问给定属性时返回 true，无论该属性存在于实例中还是原型中**
+
+```js
+function hasPrototypeProperty(object, name){
+    return !object.hasOwnProperty(name) && (name in object);
+}
+
+function Person(){
+}
+Person.prototype.name = "Nicholas";
+Person.prototype.age = 29;
+Person.prototype.job = "Software Engineer";
+Person.prototype.sayName = function(){
+    alert(this.name);
+};
+
+var person = new Person();
+alert(hasPrototypeProperty(person, "name")); //true
+
+person.name = "Greg";
+alert(hasPrototypeProperty(person, "name")); //false
+```
+
+- 在使用 for-in 循环时，返回的是所有**能够通过对象访问的、可枚举的（enumerated）属性**，其中既包括存在于实例中的属性，也包括存在于原型中的属性。- 屏蔽了原型中不可枚举属性（即将[[Enumerable]]标记为 false 的属性）的实例属性也会在 for-in 循环中返回，因为根据规定，所有开发人员定义的属性都是可枚举的
+
+- **ECMAScript 5 的 Object.keys()**,这个方法接收一个对象作为参数，**返回一个包含所有可枚举属性的字符串数组**
+
+```js
+function Person(){
+}
+Person.prototype.name = "Nicholas";
+Person.prototype.age = 29;
+Person.prototype.job = "Software Engineer";
+Person.prototype.sayName = function(){
+    alert(this.name);
+};
+
+var keys = Object.keys(Person.prototype);
+alert(keys); //"name,age,job,sayName"
+
+var p1 = new Person();
+p1.name = "Rob";
+p1.age = 31;
+
+// 
+var p1keys = Object.keys(p1);
+alert(p1keys); //"name,age" 
+```
+
+- **如果你想要得到所有实例属性，无论它是否可枚举**，都可以使Object.getOwnPropertyNames()方法
+
+```js
+var keys = Object.getOwnPropertyNames(Person.prototype);
+alert(keys); //"constructor,name,age,job,sayName"
+```
+
+#### 更简单的原型语法
+
+```js
+function Person(){
+}
+Person.prototype = {
+    name : "Nicholas",
+    age : 29,
+    job: "Software Engineer",
+    sayName : function () {
+        alert(this.name);
+    }
+};
+
+var friend = new Person();
+alert(friend instanceof Object); //true
+alert(friend instanceof Person); //true
+// 上面没有指定constructor方法，所以这里返回false
+alert(friend.constructor == Person); //false
+alert(friend.constructor == Object); //true
+```
+
+- 如果 constructor 的值真的很重要，可以像下面这样特意将它设置回适当的值。
+- 以这种方式重设 constructor 属性会导致它的[[Enumerable]]特性被设置为 true。默认情况下，原生的 constructor 属性是不可枚举的
+
+```js
+function Person(){
+}
+Person.prototype = {
+    constructor : Person,
+    name : "Nicholas",
+    age : 29,
+    job: "Software Engineer",
+    sayName : function () {
+        alert(this.name);
+    }
+};
+
+//重设构造函数，只适用于 ECMAScript 5 兼容的浏览器
+Object.defineProperty(Person.prototype, "constructor", {
+    enumerable: false,
+    value: Person
+});
+```
+
+#### 原型的动态性
+
+- 由于在原型中查找值的过程是一次搜索，**因此我们对原型对象所做的任何修改都能够立即从实例上反映出来——即使是先创建了实例后修改原型也照样如此**
+
+```js
+var friend = new Person();
+Person.prototype.sayHi = function(){
+    alert("hi");
+};
+
+// 先有对象，后有原型，没有问题
+friend.sayHi(); //"hi"（没有问题！）
+```
+
+- 尽管可以随时为原型添加属性和方法，并且修改能够立即在所有对象实例中反映出来，但如果是重写整个原型对象，那么情况就不一样了。我们知道，**调用构造函数时会为实例添加一个指向最初原型的[[Prototype]]指针，而把原型修改为另外一个对象就等于切断了构造函数与最初原型之间的联系**。
+- **实例中的指针仅指向原型，而不指向构造函数**
+
+```js
+function Person(){
+}
+var friend = new Person();
+
+Person.prototype = {
+    constructor: Person,
+    name : "Nicholas",
+    age : 29,
+    job : "Software Engineer",
+    sayName : function () {
+        alert(this.name);
+    }
+};
+friend.sayName(); //error 
+```
+
+![重写原型对象](../../image-resources/web/重写原型对象.jpg)
+
+#### 原生对象的原型
+
+- 原型模式的重要性不仅体现在创建自定义类型方面，就连所有原生的引用类型，都是采用这种模式创建的。
+- 通过原生对象的原型，不仅可以取得所有默认方法的引用，而且也可以定义新方法
+- 但不推荐给原生对象的原型添加方法
+
+```js
+String.prototype.startsWith = function (text) {
+ return this.indexOf(text) == 0;
+};
+var msg = "Hello world!";
+alert(msg.startsWith("Hello")); //true 
+```
+
+#### 原型创建对象的问题
+
+- 原型中所有属性是被很多实例共享的，这种共享对于函数非常合适
+- 对于那些包含基本值的属性倒也说得过去，**对于包含引用类型值的属性来说，问题就比较突出了**
+- 实例一般都是要有属于自己的全部属性的
+
+```js
+function Person(){
+}
+Person.prototype = {
+    constructor: Person,
+    name : "Nicholas",
+    age : 29,
+    job : "Software Engineer",
+    friends : ["Shelby", "Court"],
+    sayName : function () {
+        alert(this.name);
+    }
+};
+var person1 = new Person();
+var person2 = new Person();
+person1.friends.push("Van");
+alert(person1.friends); //"Shelby,Court,Van"
+alert(person2.friends); //"Shelby,Court,Van"
+alert(person1.friends === person2.friends); //true
+```
 
 ```js
 function People() {
@@ -373,3 +555,118 @@ this.age = 10：函数调用时，age为this指向对象的属性；
 People.age = 20：构造函数的age变为20；
 People.prototype.age = 30：原型添加age属性；
 ```
+
+#### 组合使用构造函数模式和原型模式
+
+- **构造函数模式用于定义实例属性，而原型模式用于定义方法和共享的属性**
+
+```js
+function Person(name, age, job){
+ this.name = name;
+ this.age = age;
+ this.job = job;
+ this.friends = ["Shelby", "Court"];
+}
+Person.prototype = {
+ constructor : Person,
+ sayName : function(){
+ alert(this.name);
+ }
+}
+var person1 = new Person("Nicholas", 29, "Software Engineer");
+var person2 = new Person("Greg", 27, "Doctor");
+person1.friends.push("Van");
+alert(person1.friends); //"Shelby,Count,Van"
+alert(person2.friends); //"Shelby,Count"
+alert(person1.friends === person2.friends); //false
+alert(person1.sayName === person2.sayName); //true
+```
+
+#### 动态原型模式
+
+- 动态原型模式正是致力于解决这个问题的一个方案，**它把所有信息都封装在了构造函数中，而通过在构造函数中初始化原型（仅在必要的情况下），又保持了同时使用构造函数和原型的优点**
+- **使用动态原型模式时，不能使用对象字面量重写原型，如果在已经创建了实例的情况下重写原型，那么就会切断现有实例与新原型之间的联系**
+
+```js
+function Person(name, age, job){
+ //属性
+    this.name = name;
+    this.age = age;
+    this.job = job;
+ //方法
+    if (typeof this.sayName != "function"){
+        Person.prototype.sayName = function(){
+            alert(this.name);
+        };
+    }
+}
+var friend = new Person("Nicholas", 29, "Software Engineer");
+friend.sayName();
+```
+
+#### 寄生构造函数模式
+
+- 在前述的几种模式都不适用的情况下，可以使用寄生（parasitic）构造函数模式。这种模式的基本思想是创建一个函数，该函数的作用仅仅是封装创建对象的代码，然后再返回新创建的对象
+
+```js
+function Person(name, age, job){
+    var o = new Object();
+    o.name = name;
+    o.age = age;
+    o.job = job;
+    o.sayName = function(){
+        alert(this.name);
+    };
+    return o;
+}
+var friend = new Person("Nicholas", 29, "Software Engineer");
+friend.sayName(); //"Nicholas" 
+```
+
+- 这个模式可以在特殊的情况下用来为对象创建构造函数。**假设我们想创建一个具有额外方法的特殊数组。由于不能直接修改 Array 构造函数，因此可以使用这个模式**
+
+```js
+function SpecialArray(){
+    //创建数组
+    var values = new Array();
+    //添加值
+    values.push.apply(values, arguments);
+    //添加方法
+    values.toPipedString = function(){
+        return this.join("|");
+    };
+
+    //返回数组
+    return values;
+}
+var colors = new SpecialArray("red", "blue", "green");
+alert(colors.toPipedString()); //"red|blue|green" 
+```
+
+#### 稳妥构造函数模式
+
+- **所谓稳妥对象，指的是没有公共属性，而且其方法也不引用 this 的对象**
+- 稳妥构造函数遵循与寄生构造函数类似的模式，但有两点不同：
+    - **一是新创建对象的实例方法不引用 this**
+    - **二是不使用 new 操作符调用构造函数**
+
+```js
+function Person(name, age, job){
+    //创建要返回的对象
+    var o = new Object();
+
+    //可以在这里定义私有变量和函数
+    //添加方法
+    o.sayName = function(){
+        alert(name);
+    };
+
+     //返回对象
+    return o;
+}
+
+var friend = Person("Nicholas", 29, "Software Engineer");
+friend.sayName(); //"Nicholas"
+```
+
+## 继承
